Fix bugs with dates
